# NinjaSat_ComptonSoft

NinjaSatGeometry/: .gitignore  CMakeLists.txt
NinjaSatGeometry/include/: DetectorConstruction.hh  GeometryComptonCamera.hh  NinjaSatMainGeometry.hh
NinjaSatGeometry/rubyext/: CMakeLists.txt  NinjaSatGeometry.i
NinjaSatGeometry/src/: DetectorConstruction.cc  NinjaSatMainGeometry.cc
PulseSimulator/run/: generate_pulses.rb
PulseSimulator/source/: CMakeLists.txt
PulseSimulator/source/include/: GenerateEvents.hh
PulseSimulator/source/rubyext/: CMakeLists.txt  ninjaSatPulseSimulator.i
PulseSimulator/source/src/: GenerateEvents.cc
simulation/basic_simulation/: run_simulation.rb  visualize_mass_model.rb
simulation/basic_simulation/database/: detector_parameters.xml
simulation/cxb_simulation/: run_simulation.rb
simulation/radioactivation/: spenvis_proton_spectrum.txt  timeprofile_20220701.txt
simulation/radioactivation/database/: detector_parameters.xml
simulation/radioactivation/step1/: run_simulation.rb
simulation/radioactivation/step2/: run_step2.rb
simulation/radioactivation/step3/: make_spectrum.rb  run_simulation.rb
simulation/simulation_raw_hits/: run_simulation_proton.rb  run_simulation_xray.rb
simulation/simulation_raw_hits/database/: detector_configuration.xml
